# libwiimote

./: Makefile.in  Makefile.in.dso-symlinks  configure.in  configure.in.bluez
src/: Makefile.in  Makefile.in.bluetooth  Makefile.in.board  wiimote.h  wiimote_board.c  wiimote_board.h  wiimote_event.c
